applications/scratch -4364413/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: scratch -4364413
  namespace: scratch

spec:
  replicas: 1

  selector:
    matchLabels:
      app: scratch -4364413

  template:
    metadata:
      labels:
        app: scratch -4364413

    spec:
      containers:
      - name: scratch -4364413
        image: scratch:latest

        ports:
        - containerPort: 80
