applications/scratch -4364413/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: scratch -4364413
  namespace: scratch

spec:
  selector:
    app: scratch -4364413

  ports:
  - port: 80
    targetPort: 80

  type: ClusterIP
