applications/scratch -4364413/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: 
  namespace: scratch

spec:
  ingressClassName: nginx

  rules:
  - host: .lab.local

    http:
      paths:
      - path: /

        pathType: Prefix

        backend:
          service:
            name: 

            port:
              number: 80
